# Paths-and-Ambient-Spaces

./: LICENSE  README.md  RMF_Frame_creation.ipynb  bezier_length_dnn.ipynb  bezier_length_dnn_grid.py  full_space_sampling.ipynb  functional_divercity.ipynb  grid_activation_smoothness.ipynb  jax_run_mnist.py  jax_sub_path_optim.py  jax_sub_sampling_from_path.py  mnist.ipynb  pyproject.toml  regression_data.npz  space_temperature_sampler_compare.ipynb  train_swa_path.ipynb  train_with_sorted_bias.ipynb  tunnel_sampling_showcase.ipynb  uci.ipynb
configs/: bezier_length_dnn_grid_config_adam.yaml  bezier_length_dnn_grid_config_sgd.yaml  mnist_config.yaml  split_toy_reg_path_config copy.yaml  split_toy_reg_path_config.yaml  split_toy_reg_samplingFromPath_config.yaml  split_uci_path_config.yaml  split_uci_path_config_v2.yaml  split_uci_samplingFromPath_config.yaml  split_uci_samplingFromPath_smootheness_config.yaml
proba_sandbox/data/: Readme.md  airfoil_binary.data  bikesharing.R  bikesharing.csv  breast.data  concrete_binary.data  credit.data  diabetes_classification.data  energy_binary.data  izmailov.csv  regression2d.csv  rice.data  signal_toy.npy  sinusoidal.csv
proba_sandbox/data/dataset_generators/: binarize_regression_datasets.R  linear_regression.py  mnist.py  shallow_nn_regression.py
proba_sandbox/module_sandbox/config/: README.md  base.py  core.py  data.py  sampler.py
proba_sandbox/module_sandbox/config/models/: __init__.py  base.py  cnns.py  fcn.py  gpt.py
proba_sandbox/module_sandbox/dataset/: base.py  tabular.py
src/: jax_subspace_curve.py  jax_subspace_sampling.py  jax_test_model.py  permutation.py  plot.py  utils.py
